Cleanup of CSS for overlays

--- a/extension/options.html
+++ b/extension/options.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="css/popup.css">
-    <link rel="stylesheet" href="css/labels.css">
+    <link rel="stylesheet" href="css/overlays.css">
     <script src="js/popup.js"></script>
 </head>
 
