--- a/extension/options.html
+++ b/extension/options.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/overlays.css">
     <link rel="stylesheet" href="css/popup.css">
     <link rel="stylesheet" href="css/options.css">
-    <script defer src="js/options.js"></script>
+    <script defer type="module" src="js/options.js"></script>
 </head>
 
 <body>
