--- a/extension/popup.html
+++ b/extension/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="css/popup.css">
-    <script defer type="module" src="js/popup.js"></script>
+    <script defer src="js/popup.js"></script>
 </head>
 
 <body class="body_popup">
