Bug fixes for Matteo's computer

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -20,7 +20,7 @@
     </div>
     <div class="content">
         <div id="CURRENT" class="page" style="visibility:visible">
-            Current info
+            <img src="images/dummy_current.png" alt="Current" style="width:400px">
         </div>
         <div id="OVERVIEW" class="page">
             Overview info
